vlib/v/checker/tests/immutable_array_in_if_expr_index.vv
fn main() {
	array_a := [1, 2, 3]
	array_b := [4, 5, 6]
	(if true { array_a } else { array_b })[0] = 999
	println(array_a)
}
